--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,15 @@
     "prettify": "prettier . --log-level warn --cache --write '{src/**/*,*}.{ts,tsx,js,json,yml,scss}' "
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
     "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "express": "^4.21.2"
   }
 }
