--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webapp",
+  "name": "@medgid/webapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,9 +8,14 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "types": "tsc --noEmit --project ./tsconfig.json && tsc --noEmit --project ./tsconfig.node.json && tsc --noEmit --project ./tsconfig.app.json",
     "prettify": "prettier . --log-level warn --cache --write '{src/**/*,*}.{ts,tsx,js,json,yml,scss}' "
   },
   "dependencies": {
+    "@medgid/backend": "workspace:*",
+    "@tanstack/react-query": "^5.62.8",
+    "@trpc/client": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -24,7 +29,6 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
     "prettier": "^3.4.2",
-    "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.1",
     "vite": "^6.0.3"
   }
