--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,11 +13,12 @@
   },
   "dependencies": {
     "@medgid/backend": "workspace:*",
-    "@tanstack/react-query": "^5.62.8",
+    "@tanstack/react-query": "^4.35.3",
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
