--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,9 +16,12 @@
     "@tanstack/react-query": "^4.35.3",
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
+    "include-media": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.0"
+    "react-router-dom": "^7.1.0",
+    "reset-css": "^5.0.2",
+    "sass": "^1.83.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
